@@ -73,29 +73,29 @@
             self.container = d3.select(self.element).append('div');
 
             self.container
-                .attr('class', insight.Constants.ContainerClass)
+                .attr('class', insight.constants.ContainerClass)
                 .style('position', 'relative')
                 .style('display', 'inline-block');
 
             self.chartSVG = self.container
                 .append('svg')
-                .attr('class', insight.Constants.ChartSVG);
+                .attr('class', insight.constants.ChartSVG);
 
             self.plotArea = self.chartSVG.append('g')
-                .attr('class', insight.Constants.PlotArea);
+                .attr('class', insight.constants.PlotArea);
 
             // create the empty text element used by the text measuring process
             self.axisMeasurer = self.plotArea
                 .append('text')
-                .attr('class', insight.Constants.AxisTextClass);
+                .attr('class', insight.constants.AxisTextClass);
 
             self.labelMeasurer = self.container
                 .append('text')
-                .attr('class', insight.Constants.AxisLabelClass);
+                .attr('class', insight.constants.AxisLabelClass);
 
             self.titleContainer = self.container
                 .append('text')
-                .attr('class', insight.Constants.ChartTitleClass);
+                .attr('class', insight.constants.ChartTitleClass);
 
             self.addClipPath();
 
