@@ -16,6 +16,7 @@
     * insight.Scales.Linear => insight.scales.linear
     * insight.Scales.Ordinal => insight.scales.ordinal
     * insight.Scales.Time => insight.scales.time
+    * insight.Constants => insight.constants
 
 * Issues fixed:
   * Date axis tick labels were jumping on interactive charts
